docs/핵심코드/version1.1/05-피처-지표계산.md
# 핵심코드 ⑤ — 피처: 지표를 numpy 로 직접 구현한 이유

> 줄 단위 해설입니다. **코드 담당: 신장환 님** (PR #14·#15·#16·#42·#49).
> 이 문서는 문서화 담당(이동원)이 코드를 *참고해* 쓴 해설이고, 코드는 건드리지 않습니다.
> 정본: [`features/indicators.py`](../../../features/indicators.py) ·
> [`returns.py`](../../../features/returns.py) · [`volatility.py`](../../../features/volatility.py) ·
> [`volume.py`](../../../features/volume.py)

`features/` 는 시세 표를 받아 지표(SMA·EMA·RSI·MACD·볼린저밴드·변동성·거래량 파생)를
붙이는 **순수 계산 계층**입니다. DB 도 설정도 모르고, 배열을 받아 배열을 돌려줍니다.

---

## 1. 대원칙 — t 행은 t 까지의 자료만 쓴다

모듈 머리에 명시된 계약입니다.

> 모든 함수는 과거 → 현재 방향으로만 누적되는 재귀식·롤링 합만 쓰고,
> 미래를 앞으로 당기는 연산(`shift(-1)` 에 해당하는 것)은 절대 하지 않는다.

여기를 어기면 **에러 없이 성능만 조용히 부풀어 오릅니다.** 그래서 지표마다
두 가지 테스트가 붙습니다 — ① 10행짜리 **손계산 테스트**(엑셀로 계산한 기대값과
대조) ② **shift 검사**(t+1 이후 값을 넣었다 빼도 t 이전 출력이 안 변해야 함).

## 2. SMA — 누적합 트릭과 "결측 섞인 평균은 평균이 아니다"

```python
def sma(prices: Sequence, window: int) -> np.ndarray:
    x = _to_array(prices)
    out = np.full(n, np.nan)                        # ① 앞쪽 window-1 자리는 nan

    cumulative = np.concatenate(([0.0], np.nancumsum(x)))
    sums = cumulative[window:] - cumulative[:-window]   # ② 누적합 차 = 창 합

    nan_cumulative = np.concatenate(([0], np.cumsum(np.isnan(x))))
    nan_counts = nan_cumulative[window:] - nan_cumulative[:-window]
    out[window - 1:] = np.where(nan_counts > 0, np.nan, sums / window)  # ③
    return out
```

- **①** 출력은 항상 **입력과 같은 길이**입니다. 계산 불가능한 앞자리를 잘라내는
  대신 `nan` 으로 채워, 여러 지표를 같은 길이의 열로 그대로 이어 붙일 수 있습니다.
- **②** 창마다 `sum()` 을 다시 부르는 대신, 누적합의 차로 창 합을 얻습니다 —
  O(n·w) 가 O(n) 이 되고 부동소수 오차도 작습니다.
- **③** 이 줄이 핵심입니다. `nancumsum` 은 결측을 0 으로 세므로, 그대로 나누면
  결측 섞인 창이 **조용히 낮은 평균**을 냅니다. 그래서 창 안 결측 수를 따로 세어
  **하나라도 있으면 창을 통째로 `nan`** 으로 만듭니다 — *"모르는 값이 섞인 평균은
  평균이 아니다"* (이슈 #18).

## 3. 왜 pandas `rolling`/`ewm` 을 안 쓰나

`timeseries/transform.py` 와 스타일을 맞춘 **의도된 선택**입니다.

- EMA 는 pandas 기본값(`adjust=True`)이 초기 구간을 **뒤에 오는 값까지 함께**
  정규화합니다. 우리가 원하는 것은 그 시점까지의 관측치만으로 갱신되는 표준
  재귀식(`adjust=False` 동치)이라, 재귀식을 직접 씁니다.
- RSI 는 **Wilder 원조 정의**(지수평활 `alpha = 1/window`)를 따릅니다. SMA 평균을
  쓰는 구현도 흔한데, 정의를 하나로 못박아야 손계산 테스트가 성립합니다.
- 직접 구현하면 결측 처리 규칙(위 ③)을 **우리가 정한 대로** 강제할 수 있습니다.
  pandas 의 `min_periods` 기본 동작은 우리 규칙과 다릅니다.

## 4. 함정 — 지표가 만나는 우리 자료의 실제 모양

| 지표가 전제하는 것 | 우리 자료의 실제 | 대응 |
|---|---|---|
| 가격이 연속이다 | 거래정지(volume=0) 283,468행에서 가격이 멎는다 | 창에 정지 구간이 들어오면 결측 규칙이 창을 버린다 |
| 가격이 조정돼 있다 | 🔴 **수정주가가 아니다** (#51) — 분할 갭이 그대로 | 개별 종목 지표는 v9 의 `adj_*` 4칸을 기다린다. 그전까지 종목 지표는 실험 한정 |
| 거래량에 log 를 씌울 수 있다 | 거래량 0 행이 있어 `log(0) = -inf` | `volume.py` 가 0 을 따로 다룬다 |

## 5. 모델 파트와의 이음새

지표 열을 이어 붙인 표가 모델의 X 가 됩니다. **어느 지표 조합을 쓸 것인가**는
[모델파트 v1.0 X조합 검토](../../모델파트/version1.0/X조합-피처선정-검토.md)가
다룹니다 — 조합 A~F × 모델 4종 실험의 결론은 *"하락 예측이 안 나오는 원인은
피처가 아니라 평가축"* 이었습니다 (이슈 #33·#37).
