docs/핵심코드/version1.3/05-피처-지표계산.md
# 핵심코드 ⑤ — 피처: 지표를 numpy 로 직접 구현한 이유

> 줄 단위 해설입니다. **코드 담당: 신장환 님** (PR #14·#15·#16·#42·#49).
> 이 문서는 문서화 담당(이동원)이 코드를 *참고해* 쓴 해설이고, 코드는 건드리지 않습니다.
> 정본: [`features/indicators.py`](../../../features/indicators.py) ·
> [`returns.py`](../../../features/returns.py) · [`volatility.py`](../../../features/volatility.py) ·
> [`volume.py`](../../../features/volume.py) ·
> 🆕 v1.2 (2026-09-07): §6 원자 함수 넷 · 인라인을 원자 호출로 (PR #147 · #162)

`features/` 는 시세 표를 받아 지표(SMA·EMA·RSI·MACD·볼린저밴드·변동성·거래량 파생)를
붙이는 **순수 계산 계층**입니다. DB 도 설정도 모르고, 배열을 받아 배열을 돌려줍니다.

---

## 1. 대원칙 — t 행은 t 까지의 자료만 쓴다

모듈 머리에 명시된 계약입니다.

> 모든 함수는 과거 → 현재 방향으로만 누적되는 재귀식·롤링 합만 쓰고,
> 미래를 앞으로 당기는 연산(`shift(-1)` 에 해당하는 것)은 절대 하지 않는다.

여기를 어기면 **에러 없이 성능만 조용히 부풀어 오릅니다.** 그래서 지표마다
두 가지 테스트가 붙습니다 — ① 10행짜리 **손계산 테스트**(엑셀로 계산한 기대값과
대조) ② **shift 검사**(t+1 이후 값을 넣었다 빼도 t 이전 출력이 안 변해야 함).

## 2. SMA — 누적합 트릭과 "결측 섞인 평균은 평균이 아니다"

```python
def sma(prices: Sequence, window: int) -> np.ndarray:
    x = _to_array(prices)
    out = np.full(n, np.nan)                        # ① 앞쪽 window-1 자리는 nan

    cumulative = np.concatenate(([0.0], np.nancumsum(x)))
    sums = cumulative[window:] - cumulative[:-window]   # ② 누적합 차 = 창 합

    nan_cumulative = np.concatenate(([0], np.cumsum(np.isnan(x))))
    nan_counts = nan_cumulative[window:] - nan_cumulative[:-window]
    out[window - 1:] = np.where(nan_counts > 0, np.nan, sums / window)  # ③
    return out
```

- **①** 출력은 항상 **입력과 같은 길이**입니다. 계산 불가능한 앞자리를 잘라내는
  대신 `nan` 으로 채워, 여러 지표를 같은 길이의 열로 그대로 이어 붙일 수 있습니다.
- **②** 창마다 `sum()` 을 다시 부르는 대신, 누적합의 차로 창 합을 얻습니다 —
  O(n·w) 가 O(n) 이 되고 부동소수 오차도 작습니다.
- **③** 이 줄이 핵심입니다. `nancumsum` 은 결측을 0 으로 세므로, 그대로 나누면
  결측 섞인 창이 **조용히 낮은 평균**을 냅니다. 그래서 창 안 결측 수를 따로 세어
  **하나라도 있으면 창을 통째로 `nan`** 으로 만듭니다 — *"모르는 값이 섞인 평균은
  평균이 아니다"* (이슈 #18).

## 3. 왜 pandas `rolling`/`ewm` 을 안 쓰나

`timeseries/transform.py` 와 스타일을 맞춘 **의도된 선택**입니다.

- EMA 는 pandas 기본값(`adjust=True`)이 초기 구간을 **뒤에 오는 값까지 함께**
  정규화합니다. 우리가 원하는 것은 그 시점까지의 관측치만으로 갱신되는 표준
  재귀식(`adjust=False` 동치)이라, 재귀식을 직접 씁니다.
- RSI 는 **Wilder 원조 정의**(지수평활 `alpha = 1/window`)를 따릅니다. SMA 평균을
  쓰는 구현도 흔한데, 정의를 하나로 못박아야 손계산 테스트가 성립합니다.
- 직접 구현하면 결측 처리 규칙(위 ③)을 **우리가 정한 대로** 강제할 수 있습니다.
  pandas 의 `min_periods` 기본 동작은 우리 규칙과 다릅니다.

## 4. 함정 — 지표가 만나는 우리 자료의 실제 모양

| 지표가 전제하는 것 | 우리 자료의 실제 | 대응 |
|---|---|---|
| 가격이 연속이다 | 거래정지(volume=0) 283,468행에서 가격이 멎는다 | 창에 정지 구간이 들어오면 결측 규칙이 창을 버린다 |
| 가격이 조정돼 있다 | 🔴 **수정주가가 아니다** (#51) — 분할 갭이 그대로 | 개별 종목 지표는 v9 의 `adj_*` 4칸을 기다린다. 그전까지 종목 지표는 실험 한정 |
| 거래량에 log 를 씌울 수 있다 | 거래량 0 행이 있어 `log(0) = -inf` | `volume.py` 가 0 을 따로 다룬다 |

## 5. 모델 파트와의 이음새

지표 열을 이어 붙인 표가 모델의 X 가 됩니다. **어느 지표 조합을 쓸 것인가**는
[모델파트 v1.0 X조합 검토](../../모델파트/version1.0/X조합-피처선정-검토.md)가
다룹니다 — 조합 A~F × 모델 4종 실험의 결론은 *"하락 예측이 안 나오는 원인은
피처가 아니라 평가축"* 이었습니다 (이슈 #33·#37).

---

## 6. 🆕 원자 함수 넷과 "값이 같아도 가는 길이 다르면 갈린다" (v1.2 · 2026-09-07)

**코드 담당: 신장환 님** (원자 함수 4개 · PR #147). 호출을 통일한 PR #162 는 데이터 파트가 자기 파일
(`features/stock_model_dataset.py` · `model_dataset.py`)만 고쳤습니다. 정본:
[`features/volatility.py`](../../../features/volatility.py) `hv_regime` · `atr_ratio` ·
[`indicators.py`](../../../features/indicators.py) `macd_hist_atr` · [`volume.py`](../../../features/volume.py) `obv_slope_20` ·
[피처파트 v1.1](../../피처파트/version1.1/파생_피처_4개와_시점_규칙.md)

이슈 #37 검토(X 조합)에서 나온 파생 피처 넷이 원자 층에 들어왔습니다. 그중 `hv_regime` 은 원자 층에 처음 생긴
**"레짐"** 개념입니다 — 지금 변동성이 최근 250일 평균 대비 몇 배인가:

```python
def hv_regime(prices, window=20, regime_window=250, ddof=1) -> np.ndarray:
    """hv_regime_t = hv_20_t / mean(hv_20_(t-regime_window+1 .. t))
    시점 규칙: `hv_20_t` 는 t 시점까지의 로그수익률만 쓰고, 그 위에 씌우는 `regime_window` 일
    평균도 t 시점까지의 `hv_20` 과거값만 본다 — 두 단계 다 미래를 보지 않는다.
    """
    daily_vol = historical_volatility(prices, window=window, ddof=ddof, annualize=False)
    baseline = _rolling_mean(daily_vol, regime_window)
    with np.errstate(divide="ignore", invalid="ignore"):
        result = np.where(baseline > 0, daily_vol / baseline, np.nan)
    return result
```

§1 의 대원칙 그대로입니다 — 실제로는 `window + regime_window − 1 = 269` 행 이후부터 값이 나옵니다. 이
준비구간이 KOSPI200 조합 E 의 첫 사용 가능일을 `2011-01-27` 로 밀고(⑥ §6 · 이슈 #159), 넷을 다 쓰면
표본이 3,520 → 3,284행으로 줍니다.

### 6.1 같은 값을 두 길로 내고 있었다

같은 계산이 `stock_model_dataset.py` 와 `model_dataset.py` 에 **인라인으로도** 있었습니다(신장환 님이 #155
에서 짚어 주셨습니다 · 값은 안 틀렸다 · 최대 차이 0.0). 지금은 문제없지만 원자 함수만 고쳐지고 인라인이
안 따라가면 두 값이 조용히 어긋납니다. 그래서 인라인 넷을 원자 호출로 바꿨습니다:

```python
# features/stock_model_dataset.py — _build_one_stock_features()
        ordered["atr_ratio"] = atr_ratio(high, low, close, 14)
        ordered["obv_slope_20"] = obv_slope_20(close, volume, 20)
# features/model_dataset.py — _add_derived_features()
        out["macd_hist_atr"] = macd_hist_atr(close, out["atr_14"])
        out["atr_ratio"] = atr_ratio(out["high"], out["low"], close, 14)
        out["hv_regime"] = hv_regime(close, 20, 250)
        out["obv_slope_20"] = obv_slope_20(close, out["volume"], 20)
```

고친 코드로 개별종목 패널을 다시 만들어 견주니 **172,924행 최대 절대차 0.000e+00 · 결측 엇갈림 0**.
회귀 시험 둘이 "데이터셋 값 = 원자 함수 출력" 을 잠급니다. 시험에 `if column not in frame.columns:
continue` 방어를 넣었다가 지웠습니다 — 칸이 사라졌으면 조용히 건너뛰지 않고 **실패해야** 시험이 실제로
재는 것이 됩니다.

### 6.2 그런데 하나는 갈렸다 — `hv_regime` 73행

바꾸기 전 인라인 vs 원자 함수를 **3,315,889행**(개별종목 전 패널) 에서 대조하니 셋(`atr_ratio` ·
`obv_slope_20` · `macd_hist_atr`)은 최대차 0.0 인데 `hv_regime` 만 **73행**이 달랐습니다. KOSPI200
3,618행에서는 최대 절대차 2.42e-14 · 결측 엇갈림 0 이라 실제 쓰이는 자리에서는 문제가 없습니다.

```python
def _rolling_mean(x: np.ndarray, window: int) -> np.ndarray:
    """`indicators.sma` 와 같은 누적합 트릭의 범용판 …"""
    cumulative = np.concatenate(([0.0], np.nancumsum(x)))
    sums = cumulative[window:] - cumulative[:-window]
    …
    out[window - 1:] = np.where(nan_counts > 0, np.nan, sums / window)
```

원인은 §2 의 **누적합 트릭**입니다 — 250일 창을 3,000행에 굴리면 `nancumsum` 차분의 정밀도가 깎여 baseline 이
0 근처일 때 `np.where(baseline > 0, …)` 판정이 pandas `rolling().mean()` 과 갈립니다. 인라인은
`inf → replace` 로, 원자는 `baseline > 0` 으로 0 을 다뤘습니다 — **오늘 같은 답을 내지만 같은 규약이
아닙니다.** 이 파일은 신장환 님 것이라 데이터 파트는 고치지 않고 셋 중 하나를 여쭤 뒀습니다(#155):
① 그대로 두고 개별종목에 `hv_regime` 을 넣는 날 다시 본다 · ② `np.where(baseline > eps, …)` ·
③ `pd.Series(x).rolling(window).mean()`.

> 💡 §2 가 말한 "결측 섞인 평균은 평균이 아니다" 의 반대편 함정입니다 — 결측 규칙은 같아도 **0 을 다루는
> 규약**이 다르면 언젠가 갈립니다.
